--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ dkms.conf
 .vscode/
 HomeWork#5.csproj
 obj/
+project.nuget.cache
+project.assets.json
+.csproj.nuget.g.targets
+.csproj.nuget.g.props
+.csproj.nuget.dgspec.json
