--- a/.gitignore
+++ b/.gitignore
@@ -45,16 +45,17 @@
 # Kernel Module Compile Results
 *.mod*
 *.cmd
-.tmp_versions/
+*.tmp_versions/
 modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-.vscode/
+*.vscode/
 HomeWork#5.csproj
-obj/
+*.obj/
 project.nuget.cache
 project.assets.json
-.csproj.nuget.g.targets
-.csproj.nuget.g.props
-.csproj.nuget.dgspec.json
+*.csproj.nuget.g.targets
+*.csproj.nuget.g.props
+*.csproj.nuget.dgspec.json
+*.csproj
